# metamist

./: .bumpversion.cfg  .bumpversion.toml  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  MANIFEST.in  README.md  bill-2021.csv  billing-2022.xlsm  billing-2023.xlsm  billing-2024.xlsm  codecov.yml  compile_requirements.sh  docker-compose-dev.yaml  environment-dev.yml  missing_sequence_files.txt  mypy.ini  package-lock.json  patch.diff  pyproject.toml  pytest.toml  regenerate_api.py  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py  sonar-project.properties  test-del.py  tmp_families.tsv  tmp_ped.tsv  tob_metadata_harmonisation.py  tob_wgs_audit.py
.github/: branch_checklist.yaml  dependabot.yml  renovate-config.json
api/: main.py  server.py  settings.py
api2/: server.py
audit/: audit_upload_bucket.py  audithelper.py  delete_sequence_files_from_audit.py  generic_auditor.py
db/: 2021-05-03_initial.xml  2021-05-10-no-history.xml  Dockerfile  README.md  docker-compose.yaml  global.xml  liquibase-global.properties  liquibase-project.properties  liquibase.properties  project.xml  schema.sql  schema.xml
docs/: README.md  changelog.md  contributing.md  installation.md  introduction.md  output_file_model_documentation.md
etl/: README.md  bq_log_schema.json  bq_schema.json
example/: insert_samples.py
images/: Dockerfile
infrastructure/: driver.py
metamist/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  pyproject.toml  rest.py
metamist/api/: __init__.py  analysis_api.py  analysis_runner_api.py  assay_api.py  billing_api.py  enums_api.py  family_api.py  import_api.py  participant_api.py  project_api.py  sample_api.py  seqr_api.py  sequencing_group_api.py  web_api.py
metamist/apis/: __init__.py
metamist/audit/: README.md  __init__.py  audit_upload_bucket.py  audithelper.py  delete_assay_files_from_audit.py  delete_sequence_files_from_audit.py  generic_auditor.py  non_async_auditor.py  rd_projects_summary.py  rd_projects_summary_query.sql
metamist/audit/adapters/: __init__.py  graphql_client.py  storage_client.py
metamist/audit/cli/: __init__.py  delete_audit_results.py  delete_from_audit_results.py  review_audit_results.py  upload_bucket_audit.py
metamist/audit/data_access/: __init__.py  gcs_data_access.py  metamist_data_access.py
metamist/audit/models/: __init__.py  entities.py  value_objects.py
metamist/audit/repositories/: __init__.py  gcs_repository.py  metamist_repository.py
metamist/audit/scripts/: audit_datasets.py
metamist/audit/services/: __init__.py  audit_analyzer.py  audit_logging.py  audit_orchestrator.py  delete_orchestrator.py  file_matcher.py  report_generator.py  reporter.py  review_orchestrator.py
metamist/graphql/: __init__.py
metamist/model/: analysis.py  analysis_query_model.py  analysis_status.py  analysis_update_model.py  assay.py  assay_upsert.py  billing_batch_cost_record.py  billing_column.py  billing_cost_budget_record.py  billing_cost_details_record.py  billing_source.py  billing_time_column.py  billing_time_periods.py  billing_total_cost_query_model.py  billing_total_cost_record.py  body_get_assays_by_criteria.py  body_get_latest_complete_analysis_for_type_post.py  body_get_participants.py  body_get_proportionate_map.py  body_get_samples.py  error_response.py  export_type.py  extra_participant_importer_handler.py  family_search_response_data.py  family_simple.py  family_update_model.py  http_validation_error.py  meta_search_entity_prefix.py  nested_participant.py  nested_sample.py  nested_sequencing_group.py  paging_links.py  participant_search_response_data.py  participant_upsert.py  project.py  project_summary.py  proportional_date_temporal_method.py  sample_search_response_data.py  sample_upsert.py  search_item.py  (+9 more)
metamist/models/: __init__.py
metamist/parser/: __init__.py  cloudhelper.py  generic_metadata_parser.py  generic_parser.py  sample_file_map_parser.py  sample_json_parser.py
metamist_infrastructure/: MANIFEST.in  README.md  __init__.py  __main__.py  driver.py  etl_config.py  setup.py  slack_notification.py
models/: base.py
my_query_scripts/: team_docs_metamist_tutorial.py
openapi-templates/: README.mustache  README_common.mustache  api.mustache  api_client.mustache  api_doc.mustache  api_doc_example.mustache  configuration.mustache  model_utils.mustache
resources/: muck-dark.afdesign  muck.afdesign
sample_metadata/: README.md  __init__.py  api.py  configuration.py  model_utils.py  sample.py
sample_metadata_parser/: generic_metadata_parser.py  generic_parser.py  sample_file_map_parser.py
scripts/: 20230420_sequencinggroupmigration.py  20230828_analysis_project_fixer.py  20240124_migrate_output_to_file.py  README.md  add_cram_size.py  add_nagim_gvcfs_to_tob_wgs_test_metamist.py  add_test_analyses_to_tob_wgs_test.py  add_tob_samples_to_metamist.py  arbitrary_sm.py  audit_main_upload_buckets.py  audit_upload_bucket.py  back_populate_library_type.py  back_populate_sequence_library_types.py  back_populate_sequences.py  billing_compare.py  billing_missing_batches.py  billing_update_budget_history.py  check_md5s.py  check_md5s_from_metamist.py  check_sequence_files.py  clean_up.py  clean_up_fastqs.py  cleanup_analysis_entries.py  clear_project_test_metadata.py  cmds.sh  cohort_builder.py  copy_sample_cram_to_release.py  create_custom_cohort.py  create_md5s.py  create_or_validate_md5s.py  create_test_subset.py  delete_sequence_files_from_audit.py  deleteproject.sql  determine_sequence_files_to_delete.py  duplicate_sequencing_group.py  edit_tobwgs_test_assays.py  etl_caller_example.py  find_misplaced_exome_crams.py  find_sample_files_to_delete.py  find_sequence_files_to_delete.py  (+49 more)
sm/: generate_data.py
test/: README.md  __init__.py  conftest.py  manual_test_sample.py  testDbContainer.py  test_add_samples_for_joint_calling.py  test_analysis.py  test_analysis_output_files.py  test_analysis_runner.py  test_api.py  test_api_billing.py  test_api_utils.py  test_assay.py  test_audit.py  test_audit_log.py  (+63 more)
(+727 files in other folders)
