[project]
name = "metamist-root"
version = "7.13.4"
requires-python = "==3.11.*"
dependencies = [
    "backoff>=2.2.1",
    "cpg-utils>=5.1.0",
    "google-auth>=2.19.0",
    "click>=8.1.8",
    "google-api-core[grpc]==2.24.0",
    "gql[aiohttp,requests]~=3.5",
    "python-dateutil==2.8.2",
    "requests~=2.32.4",
    "tabulate >= 0.9.0",
    "urllib3 >= 1.25.3",
    "setuptools>=80.9.0",
    "aiohttp~=3.12.14",
    "async-lru>=2.0.5",
    "boto3>=1.35.12",
    "botocore>=1.35.12",
    "cloudpathlib>=0.22.0",
    "cryptography>=41.0.0",
    "databases[mysql]==0.9.0",
    "duckdb~=1.1.3",
    "fastapi[all]~=0.120.1",
    "fsspec~=2024.10.0",
    "google-cloud-bigquery==3.11.4",
    "google-cloud-logging==2.7.0",
    "google-cloud-pubsub==2.18.3",
    "google-cloud-storage==1.43.0",
    "pyarrow~=18.1",
    "slack-sdk==3.20.2",
    "strawberry-graphql[fastapi]==0.268.1",
    "uvicorn~=0.34.2",
    "starlette>=0.49.1",
]

[tool.ruff]
line-length = 88

exclude = [
    "packages/metamist/src/metamist/api/*",
    "packages/metamist/src/metamist/apis/*",
    "packages/metamist/src/metamist/model/*",
    "packages/metamist/src/metamist/models/*",

]

[tool.ruff.format]
quote-style = "single"


[tool.ruff.lint.isort]

section-order = ["future", "standard-library", "third-party", "hail", "cpg", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
hail = [
    "hail",
    "hailtop",
]
# Adjust these for each repository, e.g., removing those that should be
# local rather than CPG. Also fill in extend_skip below if there are any
# subdirectories that should be ignored.
cpg = [
    "analysis_runner",
    "cpg_infra",
    "cpg_utils",
    "cpg_workflows",
    "gnomad",
    "hail_scripts",
    "metamist",
]


[tool.isort]
py_version = 311
profile = "black"
line_length = 88
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "HAIL",
    "CPG",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
known_hail = ["hail", "hailtop"]
# Adjust these for each repository, e.g., removing those that should be
# local rather than CPG. Also fill in extend_skip below if there are any
# subdirectories that should be ignored.
known_cpg = [
    "analysis_runner",
    "cpg_infra",
    "cpg_utils",
    "cpg_workflows",
    "gnomad",
    "hail_scripts",
]

[dependency-groups]
dev = [
    "black>=22.3.0",
    "bump-my-version>=0.30.0",
    "coverage>=7.6.10",
    "flake8>=7.1.1",
    "flake8-bugbear>=24.12.12",
    "functions-framework>=3.8.2",
    "nest-asyncio>=1.6.0",
    "openapi-generator-cli==5.3.0",
    "pre-commit>=4.0.1",
    "pylint==3.2.7",
    "pymysql==1.1.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytz>=2024.2",
    "testcontainers[mysql]>=4.8.1",
    "types-pymysql>=1.1.0.20241103",
    "pip-audit>=2.7.3",
    "strawberry-graphql[debug-server]==0.268.1",
    "greenlet==3.1.1",
    "metamist"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.uv]
package = false

[tool.uv.sources]
metamist = { path = "packages/metamist", editable = true }
