[project]
name = "metamist"
version = "7.11.2"
requires-python = ">=3.10, <3.12" #for compatibility with cpg-flow
dependencies = [
    "backoff>=2.2.1",
    "click>=8.1.8",
    "google-auth>=2.19.0",
    "google-api-core[grpc]==2.24.0",
    "urllib3 >= 1.25.3",
    "python-dateutil==2.8.2",
    "requests~=2.32.4",
    "cpg-utils>=5.1.0",
    "gql[aiohttp,requests]~=3.5",
    "tabulate >= 0.9.0",
]

description = "Python API for interacting with the Sample API system"
readme = "README.md"
license-files = ["LICENSE"]
keywords = ["bioinformatics"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/populationgenomics/metamist"

[project.entry-points.metamist_parser]
GenericMetadataParser = "metamist.parser.generic_metadata_parser:GenericMetadataParser"
SampleFileMapParser = "metamist.parser.sample_file_map_parser:SampleFileMapParser"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
